--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       font-size: 1rem;
       box-sizing: border-box;
     }
-    #output {
+    #output, #history {
       margin-top: 1em;
       border: 1px solid #ccc;
       padding: 1em;
       background: #f9f9f9;
+      white-space: pre-wrap;
     }
   </style>
 </head>
@@ -44,8 +45,13 @@
   <input id="consumption" type="number" step="0.1" />
 
   <button onclick="calculate()">Calculate Cost</button>
-  <div id="output"></div>
   <button onclick="downloadImage()">Save as Image</button>
+  <button onclick="resetInputs()">Reset Inputs</button>
+
+  <div id="output"></div>
+  <h3>History</h3>
+  <div id="history"></div>
+
   <canvas id="canvas" style="display:none;"></canvas>
 
   <script>
@@ -59,6 +65,8 @@
           localStorage.setItem(field, e.target.value);
         });
       });
+
+      renderHistory();
     };
 
     function calculate() {
@@ -76,8 +84,31 @@
       const fuelUsed = (distance * consumption) / 100;
       const cost = fuelUsed * price;
 
-      const result = `📅 ${new Date().toLocaleDateString()}\n🚗 Distance: ${distance.toFixed(1)} km\n🛢️ Fuel Used: ${fuelUsed.toFixed(2)} L\n💸 Total Cost: $${cost.toFixed(2)}`;
+      const dateTime = new Date().toLocaleString();
+      const result = `📅 ${dateTime}\n🚗 Distance: ${distance.toFixed(1)} km\n🛢️ Fuel Used: ${fuelUsed.toFixed(2)} L\n💸 Total Cost: $${cost.toFixed(2)}`;
       document.getElementById("output").innerText = result;
+
+      saveToHistory(result);
+      renderHistory();
+    }
+
+    function resetInputs() {
+      ["startOdo", "endOdo", "gasPrice", "consumption"].forEach((id) => {
+        document.getElementById(id).value = "";
+        localStorage.removeItem(id);
+      });
+    }
+
+    function saveToHistory(entry) {
+      let history = JSON.parse(localStorage.getItem("history") || "[]");
+      history.unshift(entry);
+      if (history.length > 10) history = history.slice(0, 10);
+      localStorage.setItem("history", JSON.stringify(history));
+    }
+
+    function renderHistory() {
+      const history = JSON.parse(localStorage.getItem("history") || "[]");
+      document.getElementById("history").innerText = history.join("\n\n");
     }
 
     function downloadImage() {
